--- a/pages/books.html
+++ b/pages/books.html
@@ -1,4 +1,7 @@
 <h2>Favorite Books</h2>
+<div><a href="./pages/books.html">My Favorite Books</a></div> 
+<div><a href="./pages/places.html">My Favorite Places to visit</a></div> 
+<div><a href="./pages/games_movies.html">My Favorite Games and Movies</a></div> 
 <ul>
     <li><strong>Can't hurt me</strong>
         <div><img width=200px alt="first-image" src="C:\Users\Zithanos\Desktop\First Assignment\Main_html\images\cant_hurt_me.jpg"></div>
