--- a/pages/games_movies.html
+++ b/pages/games_movies.html
@@ -1,3 +1,6 @@
+<div><a href="./pages/books.html">My Favorite Books</a></div> 
+<div><a href="./pages/places.html">My Favorite Places to visit</a></div> 
+<div><a href="./pages/games_movies.html">My Favorite Games and Movies</a></div> 
 <ul>   
     <li><h4>Favorite Games</h4>
         <ol>
