--- a/pages/places.html
+++ b/pages/places.html
@@ -1,4 +1,7 @@
 <h2>Favorite Places to visit</h2>
+<div><a href="./pages/books.html">My Favorite Books</a></div> 
+<div><a href="./pages/places.html">My Favorite Places to visit</a></div> 
+<div><a href="./pages/games_movies.html">My Favorite Games and Movies</a></div> 
 <ol>   
 <li><ul>
     <li><strong>Mecca, Saudi Arabia</strong>
