--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 <body>
     <h1>Homepage</h1>
-    <div><a href="./pages/books.html">My Favorite Books</a></div> 
-    <div><a href="./pages/places.html">My Favorite Places to visit</a></div> 
-    <div><a href="./pages/games_movies.html">My Favorite Games and Movies</a></div> 
-
-    
+    <div><a href="./books.html">My Favorite Books</a></div> 
+    <div><a href="./places.html">My Favorite Places to visit</a></div> 
+    <div><a href="./games_movies.html">My Favorite Games and Movies</a></div> 
     <div>
 </body>
 </html>
