--- a/books.html
+++ b/books.html
@@ -1,21 +1,37 @@
-<h2>Favorite Books</h2>
-<div><a href="./pages/books.html">My Favorite Books</a></div> 
-<div><a href="./pages/places.html">My Favorite Places to visit</a></div> 
-<div><a href="./pages/games_movies.html">My Favorite Games and Movies</a></div> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage</title>
+    
+</head>
+<body>
+    <header>
+        <nav>
+            <h2>Favorite Books</h2>
+        <div><a href="./books.html">My Favorite Books</a></div> 
+        <div><a href="./places.html">My Favorite Places to visit</a></div> 
+        <div><a href="./games_movies.html">My Favorite Games and Movies</a></div> 
+        </nav>
+    </header>
 <ul>
     <li><strong>Can't hurt me</strong>
-        <div><img width=200px alt="first-image" src="C:\Users\Zithanos\Desktop\First Assignment\Main_html\images\cant_hurt_me.jpg"></div>
+        <div><img width=200px alt="first-image" src=".\images\cant_hurt_me.jpg"></div>
     </li>
     <li><strong>the over-thinking cure</strong>
-        <div><img width=200px alt="first-image" src="C:\Users\Zithanos\Desktop\First Assignment\Main_html\images\overthinking_cure.jpg"></div>
+        <div><img width=200px alt="first-image" src=".\images\overthinking_cure.jpg"></div>
 
     </li>
     <li><strong>Green Lights</strong>
-        <div><img width=200px alt="first-image" src="C:\Users\Zithanos\Desktop\First Assignment\Main_html\images\green_lights.jpg"></div>
+        <div><img width=200px alt="first-image" src=".\images\green_lights.jpg"></div>
 
     </li>
     <li><strong>Software Engineering at Google</strong>
-        <div><img width=200px alt="first-image" src="C:\Users\Zithanos\Desktop\First Assignment\Main_html\images\se_at_google.jpg"></div>
+        <div><img width=200px alt="first-image" src=".\images\se_at_google.jpg"></div>
 
     </li>
 </ul>
+
+</body>
+</html>
