--- a/games_movies.html
+++ b/games_movies.html
@@ -3,39 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <nav><h2>Favorite Books</h2>
-        <div><a href="./books.html">My Favorite Books</a></div> 
-        <div><a href="./places.html">My Favorite Places to visit</a></div> 
-        <div><a href="./games_movies.html">My Favorite Games and Movies</a></div> 
-    </nav>
+    <title>Favorite Games & Movies</title>
 </head>
 <body>
+    
+    <header id="top">
+        <nav>
+            <h2>Favorite Games & Movies</h2>
+            <ul>
+        <li><a href="./books.html">My Favorite Books</a></li> 
+        <li><a href="./places.html">My Favorite Places to visit</a></li> 
+        <li><a href="./games_movies.html">My Favorite Games and Movies</a></li> 
+             </ul>
+        </nav>
+    </header>
     <ul>   
         <li><h4>Favorite Games</h4>
             <ol>
-            <li><strong>Far Cry 3</strong>
-                <div><img width=200px alt="far-cry-3" src=".\images\far_cry.jpg"></div>
-            </li>
-            <li><strong>God of War: Ragnarok</strong>
-                <div><img width=200px alt="GoW-ragnarok" src=".\images\god_of_war.jpg"></div>
-            </li>
-            <li><strong>Call of Duty: Modern Warfare</strong>
-                <div><img width=200px alt="first-image" src=".\images\cod.jpg"></div>
-            </li>
+            <li><strong>Far Cry 3</strong><br/>
+                <img width=200px alt="far-cry-3" src=".\images\far_cry.jpg">
+            </li><br/>
+            <li><strong>God of War: Ragnarok</strong><br/>
+                <img width=200px alt="GoW-ragnarok" src=".\images\god_of_war.jpg">
+            </li><br/>
+            <li><strong>Call of Duty: Modern Warfare</strong><br/>
+                <img width=200px alt="first-image" src=".\images\cod.jpg">
+            </li><br/>
         </ol></li>
         <li><h4>Favorite Movies</h4>
             <ol>
-            <li><strong>The Persuit of Happiness</strong>
-                <div><img width=200px alt="first-image" src=".\images\persuit_happiness.jpg"></div>
-            </li>
-            <li><strong>The Wolf of Wall Street</strong>
-                <div><img width=200px alt="first-image" src=".\images\wolf_wall_street.jpg"></div>
-            </li>
-            <li><strong>Split</strong>
-                <div><img width=200px alt="first-image" src=".\images\split.jpg"></div>
+            <li><strong>The Persuit of Happiness</strong><br/>
+                <img width=200px alt="first-image" src=".\images\persuit_happiness.jpg">
+            </li><br/>
+            <li><strong>The Wolf of Wall Street</strong><br/>
+                <img width=200px alt="first-image" src=".\images\wolf_wall_street.jpg">
+            </li><br/>
+            <li><strong>Split</strong><br/>
+                <img width=200px alt="first-image" src=".\images\split.jpg">
             </li>
         </ol></li>
         </ul>
+        <a href="#top">Go to the Top</a>
 </body>
 </html>
