--- a/places.html
+++ b/places.html
@@ -4,33 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite Places to visit</title>
-    <nav><h2>Favorite Places to visit</h2>
-        <div><a href="./books.html">My Favorite Books</a></div> 
-        <div><a href="./places.html">My Favorite Places to visit</a></div> 
-        <div><a href="./games_movies.html">My Favorite Games and Movies</a></div> 
-    </nav>
 </head>
 <body>
+    
+    <header id="top">
+        <nav>
+            <h2 >Favorite Places to visit</h2>
+            <ul>
+                <li><a href="./books.html">My Favorite Books</a></li> 
+                <li><a href="./places.html">My Favorite Places to visit</a></li> 
+                <li><a href="./games_movies.html">My Favorite Games and Movies</a></li> 
+            </ul>
+        </nav>
+    </header>
      <ol>   
     <li><ul>
-        <li><strong>Mecca, Saudi Arabia</strong>
-            <div><img width=300px alt="first-image" src=".\images\mecca.jpg"></div>
-
-        </li>
-        <li><strong>Tokyo, Japan</strong>
-            <div><img width=300px alt="first-image" src=".\images\tokyo.jpg"></div>
-
-        </li>
+        <li><strong>Mecca, Saudi Arabia</strong><br/>
+            <img width=300px alt="first-image" src=".\images\mecca.jpg">
+            <figcaption>Mecca is the capital of Mecca Province in the Hejaz region of western Saudi Arabia and is considered the holiest city in Islam.</figcaption>
+        </li><br/>
+        <li><strong>Tokyo, Japan</strong><br/>
+            <img width=300px alt="first-image" src=".\images\tokyo.jpg">
+            <figcaption>Tokyo serves as Japan's economic center and is the seat of both the Japanese government and the Emperor of Japan. Tokyo.</figcaption>
+        </li><br/>
     </ul></li>
     <li><ul>
-        <li><strong>New York, USA</strong>
-            <div><img width=300px alt="first-image" src=".\images\nyc.jpg"></div>
-
-        </li>
-        <li><strong>Bali, Indonesia</strong>
-            <div><img width=300px alt="first-image" src=".\images\bali.jpg"></div>
-
-        </li>
+        <li><strong>New York, USA</strong><br/>
+            <img width=300px alt="first-image" src=".\images\nyc.jpg">
+            <figcaption>Tokyo serves as Japan's economic center and is the seat of both the Japanese government and the Emperor of Japan. Tokyo.</figcaption>
+        </li><br/>
+        <li><strong>Bali, Indonesia</strong><br/>
+            <img width=300px alt="first-image" src=".\images\bali.jpg">
+            <figcaption>Bali is a province of Indonesia and the westernmost of the Lesser Sunda Islands. East of Java and west of Lombok, the province includes the island of Bali and a few smaller offshore islands</figcaption>
+        </li><br/>
 
     </ul></li>
     </ol>
+</body>
+<footer>
+    <a href="#top">Go to the Top</a>
+</footer>
+</html>
