--- a/books.html
+++ b/books.html
@@ -17,24 +17,28 @@
                 </ul>
             </nav>
     </header>
-<ul>
-    <li><strong>Can't hurt me</strong><br/>
-        <div><img width=200px alt="first-image" src=".\images\cant_hurt_me.jpg">
-        <figcaption>David Goggins' "Can't Hurt Me" is a powerful memoir that transcends the boundaries of inspiration and self-improvement.</figcaption>
-    </li><br/>
-    <li><strong>the over-thinking cure</strong><br/>
-        <img width=200px alt="first-image" src=".\images\overthinking_cure.jpg">
-        <figcaption>The Overthinking Cure is a book that understands where you’ve been through,the exhausting situation you’ve put yourself into, and how you lose your mind in the trap of anxiety and stress.</figcaption>
-    </li><br/>
-    <li><strong>Green Lights</strong><br/>
-        <img width=200px alt="first-image" src=".\images\green_lights.jpg">
-        <figcaption>Greenlights is a 2020 book by American actor Matthew McConaughey. It was published on October 20, 2020, by the Crown imprint of Crown Publishing Group.</figcaption>
-    </li><br/>
-    <li><strong>Software Engineering at Google</strong><br/>
-        <img width=200px alt="first-image" src=".\images\se_at_google.jpg">
-        <figcaption>Today, software engineers need to know not only how to program effectively but also how to develop proper engineering practices to make their codebase sustainable and healthy. This book emphasizes this difference between programming and software engineering.</figcaption>
-    </li><br/>
-</ul>
-<a href="#top">Go to the Top</a>
+    <main>
+        <ul>
+            <li><strong>Can't hurt me</strong><br/>
+                <div><img width=200px alt="first-image" src=".\images\cant_hurt_me.jpg">
+                <figcaption>David Goggins' "Can't Hurt Me" is a powerful memoir that transcends the boundaries of inspiration and self-improvement.</figcaption>
+            </li><br/>
+            <li><strong>the over-thinking cure</strong><br/>
+                <img width=200px alt="first-image" src=".\images\overthinking_cure.jpg">
+                <figcaption>The Overthinking Cure is a book that understands where you’ve been through,the exhausting situation you’ve put yourself into, and how you lose your mind in the trap of anxiety and stress.</figcaption>
+            </li><br/>
+            <li><strong>Green Lights</strong><br/>
+                <img width=200px alt="first-image" src=".\images\green_lights.jpg">
+                <figcaption>Greenlights is a 2020 book by American actor Matthew McConaughey. It was published on October 20, 2020, by the Crown imprint of Crown Publishing Group.</figcaption>
+            </li><br/>
+            <li><strong>Software Engineering at Google</strong><br/>
+                <img width=200px alt="first-image" src=".\images\se_at_google.jpg">
+                <figcaption>Today, software engineers need to know not only how to program effectively but also how to develop proper engineering practices to make their codebase sustainable and healthy. This book emphasizes this difference between programming and software engineering.</figcaption>
+            </li><br/>
+        </ul>
+    </main>
+    <footer>
+            <a href="#top">Go to the Top</a>
+    </footer>
 </body>
 </html>
