--- a/games_movies.html
+++ b/games_movies.html
@@ -17,11 +17,13 @@
              </ul>
         </nav>
     </header>
+    <main>
     <ul>   
         <li><h4>Favorite Games</h4>
             <ol>
             <li><strong>Far Cry 3</strong><br/>
                 <img width=200px alt="far-cry-3" src=".\images\far_cry.jpg">
+                <figcaption></figcaption>
             </li><br/>
             <li><strong>God of War: Ragnarok</strong><br/>
                 <img width=200px alt="GoW-ragnarok" src=".\images\god_of_war.jpg">
@@ -43,6 +45,9 @@
             </li>
         </ol></li>
         </ul>
+    </main>
+    <footer>
         <a href="#top">Go to the Top</a>
+    </footer>
 </body>
 </html>
