--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <title>Homepage</title>
 </head>
 <body>
-    <h1>Homepage</h1>
-    <div><a href="./books.html">My Favorite Books</a></div> 
-    <div><a href="./places.html">My Favorite Places to visit</a></div> 
-    <div><a href="./games_movies.html">My Favorite Games and Movies</a></div> 
-    <div>
+    <header>
+        <nav>
+            <h2>Homapage</h2>
+        <div><a href="./books.html">My Favorite Books</a></div> 
+        <div><a href="./places.html">My Favorite Places to visit</a></div> 
+        <div><a href="./games_movies.html">My Favorite Games and Movies</a></div> 
+        </nav>
+    </header>
+    <main>
+        <h2>Congrats! You reached the main page</h2>
+    </main>
 </body>
 </html>
