--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <h2>Homapage</h2>
-        <div><a href="./books.html">My Favorite Books</a></div> 
-        <div><a href="./places.html">My Favorite Places to visit</a></div> 
-        <div><a href="./games_movies.html">My Favorite Games and Movies</a></div> 
+        <div><a href="./pages/books.html">My Favorite Books</a></div> 
+        <div><a href="./pages/places.html">My Favorite Places to visit</a></div> 
+        <div><a href="./pages/games_movies.html">My Favorite Games and Movies</a></div> 
         </nav>
     </header>
     <main>
