--- a/pages/games_movies.html
+++ b/pages/games_movies.html
@@ -22,26 +22,26 @@
         <li><h4>Favorite Games</h4>
             <ol>
             <li><strong>Far Cry 3</strong><br/>
-                <img width=200px alt="far-cry-3" src=".\images\far_cry.jpg">
+                <img width=200px alt="far-cry-3" src="..\images\far_cry.jpg">
                 <figcaption></figcaption>
             </li><br/>
             <li><strong>God of War: Ragnarok</strong><br/>
-                <img width=200px alt="GoW-ragnarok" src=".\images\god_of_war.jpg">
+                <img width=200px alt="GoW-ragnarok" src="..\images\god_of_war.jpg">
             </li><br/>
             <li><strong>Call of Duty: Modern Warfare</strong><br/>
-                <img width=200px alt="first-image" src=".\images\cod.jpg">
+                <img width=200px alt="first-image" src="..\images\cod.jpg">
             </li><br/>
         </ol></li>
         <li><h4>Favorite Movies</h4>
             <ol>
             <li><strong>The Persuit of Happiness</strong><br/>
-                <img width=200px alt="first-image" src=".\images\persuit_happiness.jpg">
+                <img width=200px alt="first-image" src="..\images\persuit_happiness.jpg">
             </li><br/>
             <li><strong>The Wolf of Wall Street</strong><br/>
-                <img width=200px alt="first-image" src=".\images\wolf_wall_street.jpg">
+                <img width=200px alt="first-image" src="..\images\wolf_wall_street.jpg">
             </li><br/>
             <li><strong>Split</strong><br/>
-                <img width=200px alt="first-image" src=".\images\split.jpg">
+                <img width=200px alt="first-image" src="..\images\split.jpg">
             </li>
         </ol></li>
         </ul>
