--- a/pages/places.html
+++ b/pages/places.html
@@ -21,22 +21,30 @@
         <ol>   
         <li><ul>
             <li><strong>Mecca, Saudi Arabia</strong><br/>
-                <img width=300px alt="first-image" src="..\images\mecca.jpg">
-                <figcaption>Mecca is the capital of Mecca Province in the Hejaz region of western Saudi Arabia and is considered the holiest city in Islam.</figcaption>
+                <figure>
+                    <img width=300px alt="first-image" src="..\images\mecca.jpg">
+                    <figcaption>Mecca is the capital of Mecca Province in the Hejaz region of western Saudi Arabia and is considered the holiest city in Islam.</figcaption>
+                </figure>
             </li><br/>
             <li><strong>Tokyo, Japan</strong><br/>
-                <img width=300px alt="first-image" src="..\images\tokyo.jpg">
-                <figcaption>Tokyo serves as Japan's economic center and is the seat of both the Japanese government and the Emperor of Japan. Tokyo.</figcaption>
+                <figure>
+                    <img width=300px alt="first-image" src="..\images\tokyo.jpg">
+                    <figcaption>Tokyo serves as Japan's economic center and is the seat of both the Japanese government and the Emperor of Japan. Tokyo.</figcaption>
+                </figure>
             </li><br/>
         </ul></li>
         <li><ul>
             <li><strong>New York, USA</strong><br/>
-                <img width=300px alt="first-image" src="..\images\nyc.jpg">
-                <figcaption>Tokyo serves as Japan's economic center and is the seat of both the Japanese government and the Emperor of Japan. Tokyo.</figcaption>
+                <figure>
+                    <img width=300px alt="first-image" src="..\images\nyc.jpg">
+                    <figcaption>Tokyo serves as Japan's economic center and is the seat of both the Japanese government and the Emperor of Japan. Tokyo.</figcaption>
+                </figure>
             </li><br/>
             <li><strong>Bali, Indonesia</strong><br/>
-                <img width=300px alt="first-image" src="..\images\bali.jpg">
-                <figcaption>Bali is a province of Indonesia and the westernmost of the Lesser Sunda Islands. East of Java and west of Lombok, the province includes the island of Bali and a few smaller offshore islands</figcaption>
+                <figure>
+                    <img width=300px alt="first-image" src="..\images\bali.jpg">
+                    <figcaption>Bali is a province of Indonesia and the westernmost of the Lesser Sunda Islands. East of Java and west of Lombok, the province includes the island of Bali and a few smaller offshore islands</figcaption>
+                </figure>
             </li><br/>
 
         </ul></li>
